fix: fix logo size on mobiles

--- a/src/components/Navbar/Navbar.module.css
+++ b/src/components/Navbar/Navbar.module.css
@@ -14,10 +14,6 @@
     display: flex;
 }
 
-.nav__name img {
-    padding: 10px 0;
-    object-fit: cover;
-}
 
 .nav__links_container {
     width: 50%;
@@ -61,7 +57,7 @@ a.nav__active {
     align-items: flex-end;
     transition: var(--transition);
 }
-.nav__burger_menu_clicked  {
+.nav__burger_menu_clicked {
     background-color: #f9f9f9;
     border: 2px dashed #f1f1f1;
     padding: 0.75rem;
@@ -73,7 +69,6 @@ a.nav__active {
     width: 3rem;
     height: 0.4rem;
     background-color: #2f80de;
-    
 }
 
 .nav__burger_content a {
@@ -87,7 +82,7 @@ a.nav__active {
 
 @media (max-width: 768px) {
     .nav__container {
-        padding: 0 2rem;
+        padding: 1rem 2rem;
     }
     .nav__links_container {
         display: none;
@@ -95,6 +90,9 @@ a.nav__active {
     .nav__burger_container {
         display: flex;
     }
+    .nav__logo img {
+        height: 40px;
+      }
 }
 
 /* info */
